# terrainLoaderPlugin

./: CMakeLists.txt  README.md  cmakeBackup.txt  commands.txt  runGzClient.sh  runGzModel.sh  runGzserver.sh
gazeboSUASHCCPlugins/include/: gazebo_new_wind_plugin.h  gazebo_suas_hcc_wind_plugin.h  gazebo_terrain_loader.h  wind_data_processor.h
gazeboSUASHCCPlugins/src/: gazebo_new_wind_plugin.cpp  gazebo_suas_hcc_wind_plugin.cpp  gazebo_terrain_loader.cpp  wind_data_processor.cpp
gazeboTerrainLoader/include/: gazebo_terrain_loader.h
gazeboTerrainLoader/src/: gazebo_terrain_loader.cpp
models/terrainLoaderBlock/: model.config  model.sdf
test/: test  test.cpp
trails/: test.cpp
worlds/: allPluginsWorld.world  empty.world  terrainLoader.world  windy.world
